# portlang

./: .gitignore  CLAUDE.md  CLI.md  Cargo.toml  MANIFESTO.html  README.md  RELEASE.md  RELEASE_QUICKSTART.md  SECURITY.md  SETUP_SUMMARY.md  dist-workspace.toml  field.structure  field.toml.structure  release.sh  todo.md
.claude/skills/release-prep/: SKILL.md
.github/workflows/: release.yml  test.yml  vscode-build.yml
crates/portlang-adapt/: Cargo.toml
crates/portlang-adapt/src/: lib.rs  report.rs  statistics.rs
crates/portlang-check/: Cargo.toml
crates/portlang-cli/: Cargo.toml
crates/portlang-cli/src/: main.rs  output.rs  output_collector.rs  progress.rs
crates/portlang-cli/src/commands/: benchmark.rs  check.rs  converge.rs  diff.rs  eval.rs  evals.rs  init.rs  list.rs  mod.rs  new.rs  reflect.rs  replay.rs  report.rs  run.rs
crates/portlang-cli/src/commands/view/: common.rs  mod.rs
crates/portlang-cli/src/commands/view/templates/: diff.rs  eval.rs  field.rs  mod.rs  trajectory.rs
crates/portlang-cli/src/reflect_tools/: list_trajectories.py  load_trajectory.py  reflect.field
crates/portlang-config/: Cargo.toml
crates/portlang-config/src/: error.rs  lib.rs  parser.rs  python_extractor.rs  raw.rs  ty_resolver_hybrid.rs  validation.rs  vendored_typeshed.rs
crates/portlang-config/tests/: mcp_config_test.rs  nested_schema_test.rs  path_resolution_test.rs
crates/portlang-core/: Cargo.toml
crates/portlang-core/src/: error.rs  lib.rs  outcome.rs
crates/portlang-lsp/: Cargo.toml
crates/portlang-lsp/src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  main.rs
crates/portlang-pipeline/: Cargo.toml
crates/portlang-pipeline/src/: lib.rs
crates/portlang-provider-anthropic/: Cargo.toml
crates/portlang-provider-anthropic/src/: client.rs  error.rs  lib.rs  messages.rs  provider.rs
crates/portlang-provider-openai/: Cargo.toml
crates/portlang-provider-openai/src/: lib.rs
crates/portlang-provider-openrouter/: Cargo.toml
crates/portlang-provider-openrouter/src/: client.rs  lib.rs  provider.rs
crates/portlang-runner-claudecode/: Cargo.toml
crates/portlang-runner-claudecode/src/: lib.rs  runner.rs  settings.rs  stream_parser.rs
crates/portlang-runtime/: Cargo.toml
crates/portlang-runtime/src/: context_window.rs  environment.rs  lib.rs  loop_detection.rs  loop_runner.rs  provider.rs  structured_output.rs  verifier_runner.rs
crates/portlang-runtime/src/mcp/: client.rs  manager.rs  mod.rs  patch.rs  tool_handler.rs
crates/portlang-runtime/src/sandbox/: apple_container.rs  boundary_analyzer.rs  container_backend.rs  container_sandbox.rs  context_tracer.rs  dispatch.rs  error.rs  mod.rs  traits.rs
crates/portlang-runtime/src/structured_output/: coercer.rs  fixing_parser.rs  fixup.rs  mod.rs  parser.rs
crates/portlang-runtime/src/tools/: bash.rs  code_mode.rs  glob_tool.rs  handler.rs  mod.rs  python.rs  read.rs  registry.rs  shell.rs  write.rs
crates/portlang-runtime/tests/: code_mode_filesystem_test.rs  code_mode_mcp_test.rs  code_mode_prompt_test.rs  field.toml
crates/portlang-skills/: Cargo.toml
crates/portlang-skills/src/: helpers.rs  lib.rs  resolver.rs
crates/portlang-trajectory/: Cargo.toml
crates/portlang-trajectory/src/: diff.rs  error.rs  eval_run.rs  filesystem.rs  lib.rs  redactor.rs  replay.rs  store.rs  types.rs
docs/: http-backend-protocol.md
editors/vscode/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: field.tmLanguage.json
examples/01-hello-world/: field.toml
examples/02-code-task/: code-task.field  field.toml
examples/03-custom-python-tool/: custom-python-tool.field
examples/03-custom-python-tool/tools/: calculator.py
examples/03-custom-shell-tool/: field.toml
examples/03-custom-shell-tool/workspace/: sample.py
examples/04-custom-python-tool/: field.toml
examples/04-custom-python-tool/tools/: calculator.py
examples/04-verifiers/: field.toml  verifiers.field
examples/04-verifiers/workspace/: profile.json  summary.txt
examples/05-converge-and-report/: field.toml
examples/05-output-capture/: output-capture.field
examples/05-structured-output/: structured-output.field
examples/06-bash-tool/: field.toml
examples/06-bash-tool/workspace/: repos.txt  sysinfo.txt
examples/06-builtin-verifiers/: field.toml
examples/06-builtin-verifiers/workspace/: profile.json  summary.txt
examples/07-skills/: skills.field
examples/07-skills/workspace/: user_service.py
examples/07-structured-output-example/: field.toml
examples/07-structured-output-example/workspace/: output.json
examples/08-bash-tool/: field.toml
examples/structured-output-example/: README.md  field.toml
examples/structured-output-example/workspace/: output.json
pctx-evals/00-code-mode-simple-test/: code-mode-simple-test.field  field.toml
pctx-evals/01-data-filtering/: field.toml
pctx-evals/01-data-filtering/tools/: data_tools.py
pctx-evals/01-data-filtering/workspace/: output.json  users.json
pctx-evals/02-multi-step-pipeline/: field.toml  multi-step-pipeline.field
pctx-evals/02-multi-step-pipeline/tools/: pipeline_tools.py
pctx-evals/02-multi-step-pipeline/workspace/: sales.csv  summary.json
pctx-evals/03-file-processing/: field.toml  file-processing.field
pctx-evals/03-file-processing/tools/: log_tools.py
pctx-evals/04-mcp-filesystem/: field.toml
pctx-evals/05-github-copilot-mcp/: field-demo.toml  field.toml  github-copilot-mcp.field
pctx-evals/stripe-benchmark/: BENCHMARK_RESULTS.md  Dockerfile  README.md  field.toml  parent.field  reset-fixtures.sh  stripe.patches.json
pctx-evals/stripe-benchmark/01-get-balance/: field.toml  get-balance.field
pctx-evals/stripe-benchmark/02-list-customers-limit-3/: field.toml  list-customers-limit-3.field
pctx-evals/stripe-benchmark/03-get-balance/: field.toml  get-balance.field
pctx-evals/stripe-benchmark/04-find-expensive-product/: field.toml  find-expensive-product.field
tests/: trajectory_tests.rs
tests/integration/: README.md
(+58 files in other folders)
