[package]
name = "portlang-check"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portlang-core = { workspace = true }
portlang-config = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
