[package]
name = "portlang"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI for building reliable, model-agnostic agents"
homepage = "https://github.com/portofcontext/portlang"

[[bin]]
name = "portlang"
path = "src/main.rs"

[dependencies]
portlang-core = { workspace = true }
portlang-config = { workspace = true }
portlang-runtime = { workspace = true, features = ["code-mode"] }
portlang-trajectory = { workspace = true }
portlang-adapt = { workspace = true }
portlang-provider-anthropic = { workspace = true }
portlang-provider-openrouter = { workspace = true }
portlang-check = { workspace = true }
clap = { workspace = true }
clap-markdown = "0.1"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
indicatif = "0.18"
dialoguer = "0.12"
walkdir = { workspace = true }
open = "5.0"
dirs = "6.0"
chrono = { workspace = true }
