[package]
name = "portlang-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "portlang-lsp"
path = "src/main.rs"

[dependencies]
portlang-config = { workspace = true }
portlang-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tower-lsp = "0.20"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = { workspace = true }
