[package]
name = "portlang-runner-claudecode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.1"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
portlang-core = { workspace = true }
portlang-runtime = { workspace = true }
