[package]
name = "portlang-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
code-mode = ["dep:pctx_code_mode"]

[dependencies]
portlang-core = { workspace = true }
portlang-config = { workspace = true }
portlang-provider-anthropic = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
shell-escape = "0.1"
rmcp = { version = "0.14.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
shellexpand = "3.1"
reqwest = "0.12"
jsonschema = "0.18"

# Optional: Code Mode support
pctx_code_mode = { version = "0.2.3", optional = true }
