[package]
name = "portlang-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
code-mode = ["dep:pctx_code_mode"]

[dependencies]
portlang-core = { workspace = true }
portlang-config = { workspace = true }
portlang-provider-anthropic = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
shell-escape = "0.1"
base64 = "0.22.1"
rmcp = { version = "1.2.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
shellexpand = "3.1"
reqwest = "0.13.2"
jsonschema = "0.45.0"
strsim = "0.11"
fastembed = "5.12.1"
dirs = "6.0"

# Optional: Code Mode support
pctx_code_mode = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3.27.0"
