[package]
name = "portlang-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"
tokio = { workspace = true }

[dependencies]
portlang-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
dirs = "6"
